[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "retrolca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aizynthfinder>=4.4.1",
    "cirpy>=1.0.2",
    "olca-ipc>=2.6.3",
    "olca-schema>=2.6.2",
    "rdkit>=2023.9.6",
    "requests>=2.33.1",
]

[tool.ruff]
line-length = 80

[tool.setuptools.packages.find]
include = ["retrolca*"]
